--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -72,4 +72,5 @@
     <string name="sign_in">Sign In</string>
     <string name="sign_out">Sign Out</string>
     <string name="menu_logout">Log out</string>
+    <string name="title_activity_testing">TestingActivity</string>
 </resources>
