--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -73,4 +73,12 @@
     <string name="sign_out">Sign Out</string>
     <string name="menu_logout">Log out</string>
     <string name="title_activity_testing">TestingActivity</string>
+
+    <string name="intro_text">Hi! Let\'s listen to some available data sources! Check the menu for more actions!</string>
+    <string name="action_unregister_listener">Unregister listener</string>
+    <string name="action_settings">Settings</string>
+    <string name="permission_denied_explanation">Permission was denied, but is needed for core
+        functionality.</string>
+    <string name="settings">Settings</string>
+    <string name="ok">OK</string>
 </resources>
