--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,28 @@
     <string name="title_activity_planner">PlannerActivity</string>
 
     <string-array name="routines_array">
-        <item>Arm Curls</item>
+        <item>Arnold Press</item>
+        <item>Barbell Bench Press</item>
+        <item>Barbell Curl</item>
+        <item>Bench Dips</item>
+        <item>Bicep Cable Curl</item>
         <item>Chest Press</item>
-        <item>Shoulder Press</item>
-        <item>Seated Rows</item>
+        <item>Decline Crunch</item>
+        <item>Dumbbell Bicep Curl</item>
+        <item>Front Raises</item>
+        <item>Front Squat</item>
+        <item>Hanging Leg Raises</item>
+        <item>Incline Bench Press</item>
         <item>Lat Pull Down</item>
-        <item>Pec Fly</item>
+        <item>Lateral Raises</item>
+        <item>Leg Press</item>
+        <item>Machine Bench Press</item>
+        <item>Machine Crunch</item>
         <item>Rear Delts</item>
+        <item>Reverse Crunch</item>
+        <item>Romanian Deadlift</item>
+        <item>Shoulder Press</item>
+        <item>Seated Cable Row</item>
         <item>Triceps Extension</item>
     </string-array>
     <string-array name="weight_array">
